[package]
name = "quantum-circuit-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
nalgebra = "0.35.0"
ndarray = "0.17.2"
num-complex = "0.4.6"
rand = "0.8"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
